# specterqa

./: README.md  pyproject.toml
.github/workflows/: agentic-approval.yml
examples/products/: demo.yaml  forgeos.yaml
schemas/: product.schema.json
src/specterqa/cli/: run.py  validate.py
